# testing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package-lock.json  package.json  script.sql
DB/: CMakeLists.txt  db_config.txt  db_create.txt
DB/include/: AbstractDBController.h  DBController.h  DocumentRepository.h  UserRepository.h
DB/src/: DBController.cpp  DocumentRepository.cpp  UserRepository.cpp
DB/test/: testDB.cpp  test_repo.cpp
HTTPServer/: CMakeLists.txt
HTTPServer/docs/: ComRed.drawio
HTTPServer/include/: client.h  httpClient.h
HTTPServer/include/server/: BasicResponses.h  BeastServerHeader.h  Connection.h  Listener.h  Server.h  handleRequest.h
HTTPServer/include/server/controller/: ConnectController.h  Controller.h  CreateController.h  DeleteController.h  DisconnectController.h  EditController.h  GetTextController.h  LoginController.h  LogoutController.h  RegistrationController.h  controllers.h
HTTPServer/src/: ConnectController.cpp  Connection.cpp  CreateController.cpp  DeleteController.cpp  DisconnectController.cpp  EditController.cpp  GetTextController.cpp  Listener.cpp  LoginController.cpp  LogoutController.cpp  RegistrationController.cpp  main.cpp  server.cpp
HTTPServer/src/client/: httpClient.cpp
HTTPServer/test/: CMakeLists.txt  controllers_test.cpp  server_run_test.cpp  test_e2e.cpp
ServerApplication/: CMakeLists.txt  main.cpp
ServerApplication/include/: DocumentParBuilder.h  Editor.h  EditorListener.h  EditorManager.h  EditorManagerDelegate.h  MockDBController.h  MockDocumentRepository.h  MockUserRepository.h  ServerApplication.h  ServerHeader.h  Session.h  UserParBuilder.h  structs.h
ServerApplication/src/: DocumentParBuilder.cpp  Editor.cpp  EditorManager.cpp  ServerApplication.cpp  Session.cpp  UserParBuilder.cpp
ServerApplication/test/: test.cpp  test_usecase.cpp
Utils/: CMakeLists.txt
Utils/include/: Change.h  Document.h  DocumentBuilder.h  Operation.h  OperationBuilder.h  User.h  UserBuilder.h
Utils/src/: Change.cpp  Document.cpp  DocumentBuilder.cpp  Operation.cpp  OperationBuilder.cpp  User.cpp  UserBuilder.cpp
Utils/test/: test.cpp
Utils/test/domain/: OperationBuilder.h
prTest.xcodeproj/: project.pbxproj
prTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
prTest.xcodeproj/project.xcworkspace/xcuserdata/slava.xcuserdatad/: UserInterfaceState.xcuserstate
prTest.xcodeproj/xcuserdata/slava.xcuserdatad/xcschemes/: xcschememanagement.plist
